# beaker-py

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  conftest.py  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: ci.yml  main.yml  pr_checks.yml
beaker/: __init__.py  aliases.py  beaker_pb2.py  beaker_pb2.pyi  beaker_pb2_grpc.py  client.py  config.py  conftest.py  data_model.py  exceptions.py  progress.py  py.typed  util.py  version.py
beaker/data_model/: __init__.py  _base_v1.py  _base_v2.py  account.py  base.py  cluster.py  dataset.py  experiment.py  experiment_spec.py  group.py  image.py  job.py  node.py  organization.py  secret.py  workspace.py
beaker/services/: __init__.py  account.py  cluster.py  dataset.py  experiment.py  group.py  image.py  job.py  node.py  organization.py  secret.py  service_client.py  workspace.py
docs/source/: api.rst  conf.py  examples.md  faq.md  index.rst  installation.md  overview.rst  quickstart.md
docs/source/api/: client.rst  config.rst  data_models.rst  exceptions.rst  experiment_spec.rst
examples/sweep/: Dockerfile  README.md  entrypoint.py  run.py
integration_tests/: datasets_test.py  experiments_test.py  image_test.py  images_test.py  jobs_test.py
scripts/: add_pr_comments_on_release.sh  hello_world.py  prepare_changelog.py  release.sh  release_notes.py
test_fixtures/docker/: Dockerfile
tests/: account_test.py  client_test.py  cluster_test.py  config_test.py  data_model_test.py  dataset_test.py  experiment_test.py  group_test.py  image_test.py  job_test.py  node_test.py  organization_test.py  secret_test.py  util_test.py  workspace_test.py
