[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaker-py"
dynamic = ["version"]
readme = "README.md"
description = "A Python Beaker client"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "contact@allenai.org" },
    { name = "Pete Walsh", email = "petew@allenai.org" },
]
license = {file = "LICENSE"}
requires-python = ">3.7"
dependencies = [
    "requests",
    "packaging",
    "pydantic>=1.8.2,<3.0",
    "rich>=12.3,<14.0",
    "PyYAML",
    "docker>=5.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.5",
    "types-requests",
    "types-cachetools",
    "types-PyYAML",
    "black>=23.0,<24.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-sphinx",
    "flaky",
    "twine>=1.11.0",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=6.0,<8.0",
    "furo==2023.5.20",
    "myst-parser>=1.0,<2.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2021.3.14",
    "sphinx-autodoc-typehints==1.23.3",
    "sphinx-inline-tabs",
    "packaging",
    "petname==2.6",
]

[project.urls]
Homepage = "https://github.com/allenai/beaker-py"
Repository = "https://github.com/allenai/beaker-py"
Changelog = "https://github.com/allenai/beaker-py/blob/main/CHANGELOG.md"
Documentation = "https://beaker-py.readthedocs.io/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "docs*",
    "scripts*",
    "examples*",
    "integration_tests*",
]

[tool.setuptools.package-data]
beaker = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "beaker.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 115
ignore = ["F403", "F405"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = [
    "tests/",
    "integration_tests/",
]
python_classes = [
    "Test*",
    "*Test",
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
filterwarnings = [
    'ignore:.*distutils Version classes are deprecated.*:DeprecationWarning:docker\.utils\.utils',
]
